--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~53.0.10",
+    "expo-camera": "~16.1.8",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-maps": "^1.24.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1"
   },
