--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~53.0.10",
     "expo-camera": "~16.1.8",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.3",
-    "react-native-gesture-handler": "^2.26.0",
     "react-native-maps": "^1.24.3",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "expo-splash-screen": "~0.30.9"
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
