--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "expo-updates": "~0.28.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
